--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -10,20 +10,22 @@
 {% endblock %}
 
 {% block main %}
-    <div class="login-card">
-        <h1>Iniciar sesión</h1>
-        <form method="post" action="{% url 'login' %}">
-            {% csrf_token %}
-            <div class="mb-3">
-                <label for="inputUsername" class="form-label">Usuario</label>
-                <input type="text" name="username" id="inputUsername" class="form-control" required>
-            </div>
-            <div class="mb-3">
-                <label for="inputPassword" class="form-label">Contraseña</label>
-                <input type="password" name="password" id="inputPassword" class="form-control" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
-        </form>
+    <div class="container-hero">
+        <div class="login-card">
+            <h1>Iniciar sesión</h1>
+            <form method="post" action="{% url 'login' %}">
+                {% csrf_token %}
+                <div class="mb-3">
+                    <label for="inputUsername" class="form-label">Usuario</label>
+                    <input type="text" name="username" id="inputUsername" class="form-control" required>
+                </div>
+                <div class="mb-3">
+                    <label for="inputPassword" class="form-label">Contraseña</label>
+                    <input type="password" name="password" id="inputPassword" class="form-control" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+            </form>
+        </div>
     </div>
 {% endblock %}
 
