--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -24,6 +24,7 @@
                     <input type="password" name="password" id="inputPassword" class="form-control" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+                <a href="{% url 'welcome' %}" class="btn btn-secondary ms-2">Cancelar</a>
             </form>
         </div>
     </div>
