--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}NUAM - Sistema de Calificaciones{% endblock %}</title>
     
-    <!-- Bootstrap 5 -->
+    <!-- Bootstrap  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
     
     <!-- Estilos personalizados -->
