--- a/core/templates/calificaciones/carga_archivo.html
+++ b/core/templates/calificaciones/carga_archivo.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}<title>{{ page_title|default:"Carga de Calificaciones" }}</title>{% endblock %}
+{% block title %}{{ page_title|default:"Carga de Calificaciones" }}{% endblock %}
 {% block styles %}<link rel="stylesheet" href="{% static 'css/cargaMasiva.css' %}">{% endblock %}
 
 {% block main %}
